--- a/css/main.sass
+++ b/css/main.sass
@@ -46,6 +46,15 @@ body, html
     max-width: 1060px
     margin: 0 auto
 
+// TERMS
+.terms
+    text-align: center
+    margin: 0 auto
+    max-width: 960px
+        
+
+
+
 // Components
 @import 'components/buttons.sass'
 @import 'components/nav.sass'
