--- a/css/main.sass
+++ b/css/main.sass
@@ -62,6 +62,7 @@ body, html
 @import 'components/button-special.css'
 @import 'components/product.sass'
 @import 'components/footer.sass'
+@import 'components/animate.css'
 
 // IMPORT CART
 @import 'components/cart/css/snipcart.css'
